Remove additional spacing for files tab and increase the default padding a bit to avoid that the content is too close to the border when there is no scroll bar

--- a/frontend/src/global_styles/layout/work_packages/_full_view.sass
+++ b/frontend/src/global_styles/layout/work_packages/_full_view.sass
@@ -113,7 +113,7 @@
       height: 100%
       overflow: auto
       @include styled-scroll-bar
-      padding-right: 5px
+      padding-right: 8px
 
     .work-package-details-activities-activity-contents ul.work-package-details-activities-messages
       padding-left: 0
